# Graphics-and-Visual-Computing

Lab 1/: CMakeLists.txt  a.out  bresenham.cpp  main.cpp
Lab 2/: CMakeLists.txt  main.cpp
Lab 3/: CMakeLists.txt  main.cpp
Lab 4/: CMakeLists.txt  main.cpp
Lab 5/: CMakeLists.txt  bezeir.cpp  circle.cpp  main.cpp  main2.cpp
Lab 6/: CMakeLists.txt  fracviewer.c  fracviewer.h  main.cpp
Sample/: firstOpenGlApp
